# Ornikar_MLE_Case_Study

./: .gitignore  Dockerfile  README.md  app.py  client.py  config.py  main.py  pyproject.toml  requirements.txt
data/: X_test.csv  long_quotes.csv  preprocessed_data.csv
models/: trained_model.pkl
results/: evaluation.txt
src/: data_preprocessing.py  model.py  serving.py
