[tool.poetry]
name = "ornikar-mle-case-study"
version = "0.1.0"
description = ""
authors = ["Kosar Kazemi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "1.1.2"
requests = "2.31.0"
werkzeug = "2.2.2"
scikit-learn = "1.3.1"
joblib = "1.1.1"
pandas = "1.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
